--- a/templates/dovecot/ldap/passdb.conf
+++ b/templates/dovecot/ldap/passdb.conf
@@ -2,4 +2,9 @@ uris = $ldap_uri
 ldap_version = 3
 base = $ldap_base_dn
 auth_bind = yes
-auth_bind_userdn = uid=%Ln,$ldap_base_dn
+#auth_bind_userdn = uid=%Ln,$ldap_base_dn
+dn = $ldap_bind_dn
+dnpass = $ldap_bind_dn_password
+pass_attrs = =user=%{ldap:mail}
+pass_filter = (mail=%u)
+user_attrs = =user=%{ldap:mail}
